--- a/style.css
+++ b/style.css
@@ -109,3 +109,12 @@ font-size: medium;
     color: var(--secondary);
     font-weight: 400;
 }
+.imagen {
+    position: relative;
+    margin-top: 1em;
+    margin-left: 3em;
+    width: 12em;
+    height: 12em;
+    border-radius: 1em;
+    overflow: hidden;
+}
